Fix table overflows

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,3 +32,7 @@
 .inline-checkbox {
   display: inline;
 }
+
+.horizontal-scroll-overflow {
+  overflow-x: auto;
+}
